--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
     "link-prevue": "^1.2.0",
+    "nodemon": "^2.0.6",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
