--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "Team Phoebe",
   "private": true,
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "cross-env QENV=development quasar dev",
+    "test-dev": "cross-env QENV=test quasar dev",
+    "combined": "cross-env QENV=development+test quasar dev",
+    "build": "cross-env QENV=production quasar build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -14,11 +18,12 @@
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
     "link-prevue": "^1.2.0",
-    "nodemon": "^2.0.6",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "^2.1.1"
+    "@quasar/app": "^2.1.1",
+    "@quasar/quasar-app-extension-qenv": "^1.0.3",
+    "cross-env": "^7.0.2"
   },
   "engines": {
     "node": ">= 10.18.1",
