--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "build": "cross-env QENV=production quasar build"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.9.10",
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
     "link-prevue": "^1.2.0",
-    "quasar": "^1.0.0"
+    "quasar": "^1.14.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@quasar/app": "^2.1.1",
+    "@quasar/app": "^2.1.6",
     "@quasar/quasar-app-extension-qenv": "^1.0.3",
     "cross-env": "^7.0.2"
   },
