--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+        env:
+          FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
