--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "cross-env QENV=development quasar dev",
     "test-dev": "cross-env QENV=test quasar dev",
     "combined": "cross-env QENV=development+test quasar dev",
-    "build": "cross-env QENV=production quasar build",
+    "build": "cross-env QENV=development quasar build",
     "deploy": "firebase use default && cross-env QENV=development quasar build && firebase deploy"
   },
   "dependencies": {
