--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test-dev": "cross-env QENV=test quasar dev",
     "combined": "cross-env QENV=development+test quasar dev",
     "build": "cross-env QENV=development quasar build",
+    "build-github": "quasar build",
     "deploy": "firebase use default && cross-env QENV=development quasar build && firebase deploy"
   },
   "dependencies": {
