--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,13 @@ jobs:
         uses: actions/checkout@master
       - name: Install Dependencies
         run: npm install
+      - name: Create .quasar.env.json from secret
+        run: 'echo "$QUASAR_ENV" > .quasar.env.json'
+        shell: bash
+        env:
+          QUASAR_ENV: ${{ secrets.QUASAR_ENV }}
       - name: Build
         run: npm run build
-        env:
-          FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
@@ -42,3 +45,5 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          FIREBASE_PROJECT: spotify-web-forum
+          TARGET_BRANCH: master
