--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "firebase": "^7.24.0",
     "link-prevue": "^1.2.0",
     "quasar": "^1.14.3",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuexfire": "^3.2.4"
   },
   "devDependencies": {
     "@quasar/app": "^2.1.6",
