--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
+    "firebase-admin": "^9.4.1",
+    "firebase-functions": "^3.11.0",
     "link-prevue": "^1.2.0",
     "quasar": "^1.14.3",
+    "spotify-web-api-node": "^5.0.0",
+    "vue-axios": "^3.2.0",
     "vuex": "^3.5.1",
     "vuexfire": "^3.2.4"
   },
