--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^7.24.0",
     "link-prevue": "^1.2.0",
     "quasar": "^1.14.3",
+    "v-emoji-picker": "^2.3.1",
     "vuex": "^3.5.1",
     "vuexfire": "^3.2.4"
   },
