--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
     "link-prevue": "^1.2.0",
+    "pkce-challenge": "^2.1.0",
     "quasar": "^1.14.3",
+    "spotify-web-api-node": "^5.0.0",
     "vuex": "^3.5.1",
     "vuexfire": "^3.2.4"
   },
