--- a/package.json
+++ b/package.json
@@ -13,25 +13,24 @@
   },
   "dependencies": {
     "vue": "^2.6.12",
-    "@firebase/firestore-types": "^2.0.0",
-    "@quasar/extras": "^1.9.10",
+    "quasar": "^1.14.7",
+    "@quasar/extras": "^1.9.11",
     "axios": "^0.18.1",
-    "core-js": "^3.6.5",
+    "vuex": "^3.6.0",
+    "vuexfire": "^3.2.5",
+    "core-js": "^3.8.1",
     "firebase": "^7.24.0",
     "link-prevue": "^1.2.0",
     "pkce-challenge": "^2.1.0",
-    "quasar": "^1.14.3",
     "spotify-web-api-node": "^5.0.0",
     "v-emoji-picker": "^2.3.1",
-    "vue-check-view": "^0.3.0",
-    "vuex": "^3.5.1",
-    "vuexfire": "^3.2.4"
+    "vue-check-view": "^0.3.0"
   },
   "devDependencies": {
-    "@quasar/app": "^2.1.6",
+    "@quasar/app": "^2.1.11",
     "@quasar/quasar-app-extension-qenv": "^1.0.3",
-    "cross-env": "^7.0.2",
-    "firebase-tools": "^8.14.1"
+    "cross-env": "^7.0.3",
+    "firebase-tools": "^8.19.0"
   },
   "engines": {
     "node": ">= 10.18.1",
@@ -39,7 +38,7 @@
     "yarn": ">= 1.21.1"
   },
   "browserslist": [
-    "ie >= 11",
+    "ie 11",
     "last 10 Chrome versions",
     "last 10 Firefox versions",
     "last 4 Edge versions",
